Update interparty related matching v5_sparse_matrix_using_package.ipynb

--- a/interparty related matching v5_sparse_matrix_using_package.ipynb
+++ b/interparty related matching v5_sparse_matrix_using_package.ipynb
@@ -190,7 +190,7 @@
     "    \n",
     "    # Compute the cosine similarities between the rows of the two matrices\n",
     "    # This line calculates the cosine similarity between each row of the vendor-customer matrix and each row of the interested party matrix, resulting in a matrix of similarity scores.\n",
-    "    similarity_scores = cosine_similarity(vendor_customer_matrix, interested_party_matrix)\n",
+    "    similarity_scores = cosine_similarity(vendor_customer_matrix, interested_party_matrix, dense_output=False)\n",
     "        \n",
     "    # Find the most similar interested party and its similarity score for each row of the vendor_customer_matrix\n",
     "    def find_most_similar(row_idx):\n",
